--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.uviyolabone.alcchallenge">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-    tools:ignore="GoogleAppIndexingWarning">
+        android:supportsRtl="false"
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".MyProfileActivity"
-            android:label="@string/title_activity_my_profile"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:name=".ProfileActivity"
+            android:parentActivityName="com.uviyolabone.alcchallenge.MainActivity" />
         <activity
-            android:name=".AboutALCActivity"
-            android:label="@string/title_activity_about_alc"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name="com.uviyolabone.alcchallenge.AboutALCActivity"
+            android:parentActivityName="com.uviyolabone.alcchallenge.MainActivity" />
+        <activity android:name="com.uviyolabone.alcchallenge.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
